--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/aesugps
 spring.datasource.username=${user}
 spring.datasource.password=${pass}
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.flyway.out-of-order=true
-
-
-
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.open-in-view=false
