--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
                         <goals>
                             <goal>generate</goal>
                         </goals>
-                        <phase>validate</phase>
+                        <phase>compile</phase>
                     </execution>
                 </executions>
                 <configuration>
