--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@angular/animations": "7.1.0",
     "@angular/cdk": "7.1.0",
     "@angular/common": "7.1.0",
@@ -18,7 +19,6 @@
     "@angular/core": "7.1.0",
     "@angular/forms": "7.1.0",
     "@angular/material": "7.1.0",
-
     "@angular/platform-browser": "7.1.0",
     "@angular/platform-browser-dynamic": "7.1.0",
     "@angular/router": "7.1.0",
