--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0",
+    "@agm/core": "1.0.0",
     "@angular/animations": "7.1.0",
     "@angular/cdk": "7.1.0",
     "@angular/common": "7.1.0",
@@ -22,9 +22,10 @@
     "@angular/platform-browser": "7.1.0",
     "@angular/platform-browser-dynamic": "7.1.0",
     "@angular/router": "7.1.0",
+    "bootstrap": "4.3.1",
     "core-js": "2.5.4",
     "rxjs": "6.3.3",
-    "rxjs-compat": "^6.5.3",
+    "rxjs-compat": "6.5.3",
     "tslib": "1.9.0",
     "zone.js": "0.8.26"
   },
